# fpl-agent

./: .gitignore  README.md  pyproject.toml  query-samples  requirements.txt
.streamlit/: config.toml
src/: agent.py  app.py  config.py  main.py  prompt.py  tools.py
src/tools/: events.py  h2h.py  players.py  teams.py
