[tool.poetry]
name = "fpl-agent"
version = "0.1.0"
description = ""
authors = ["margostino"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >=3.9.8,<4.0"
langchain = "^0.1.4"
openai = "^1.10.0"
jq = "^1.6.0"
langchain-openai = "^0.0.5"
streamlit = "^1.30.0"
langchain-experimental = "^0.0.49"
wikipedia = "^1.4.0"
langchainhub = "^0.1.14"
langchain-community = "^0.0.16"
watchdog = "^3.0.0"
python-dotenv = "^1.0.1"
pydantic = "1.10.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
